--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 </head>
 <body>
     <Form>
+        <fieldset>
         <label for="name">Name:</label>
-        <input type="text" required> <br>
-        <label for="email">Email:</label>
-        <input type="email" required><br>
-        <label for="telephone">Phone:</label>
-        <input type="number" required><br>
-        <label for="password">Password:</label>
-        <input type="password" required><br>
-        <label for="male">Male</label>
+        <input type="text" required>
+        <p><label for="email">Email:</label>
+        <input type="email" required></p>
+        <p><label for="telephone">Phone:</label>
+        <input type="number" required></p>
+        <p><label for="password">Password:</label>
+        <input type="password" required></p>
+        <p><label for="male">Male</label>
         <input type="radio" name="sex" id="male" value="male">
         <label for="female">Female</label>
-        <input type="radio" name="sex" id="female" value="female"><br>
+        <input type="radio" name="sex" id="female" value="female"></p>
         
         <button>submit</button>
+    </fieldset>
 
     </Form>
 
